# fastapi

folder-structure/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
folder-structure/alembic/: env.py
folder-structure/app/api/: deps.py  middleware.py
folder-structure/app/api/v1/: auth.py  property.py  router.py  users.py
folder-structure/app/core/: config.py  constants.py  logging.py  security.py
folder-structure/app/db/: database.py  session.py
folder-structure/app/events/: consumers.py  publishers.py
folder-structure/app/exceptions/: custom.py  handlers.py
folder-structure/app/models/: lead.py  property.py  user.py
folder-structure/app/repositories/: lead_repository.py  property_repository.py  user_repository.py
folder-structure/app/schemas/: auth.py  common.py  lead.py  pagination.py  property.py  user.py
folder-structure/app/services/: auth_service.py  notification_service.py  property_service.py  user_service.py
folder-structure/app/tests/: test_auth.py  test_property.py  test_users.py
folder-structure/app/utils/: formatter.py  helpers.py  validators.py
folder-structure/src/: main.py
folder-structure/src/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  pagination.py
folder-structure/src/domains/auth/: config.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
folder-structure/src/domains/users/: exceptions.py  (+4 more)
folder-structure/tests/: conftest.py
folder-structure/tests/auth/: test_login.py
folder-structure/tests/users/: test_users.py
(+35 files in other folders)
